--- a/index.html
+++ b/index.html
@@ -149,12 +149,26 @@
             .panel {
                 padding: 12px
             }
+            /* stack the password row on small screens */
+            .password-row{flex-direction:column;align-items:stretch;gap:8px}
+            .password-row .neon-input{width:100%;min-width:0}
+            #copyBtn{width:100%;justify-content:center;padding:10px}
+
+            /* action row: stack generate button and strength box */
+            .action-row{flex-direction:column;gap:12px;align-items:stretch}
+            .action-row #generateBtn{width:100%;justify-content:center}
+            .action-row .status{width:100%;text-align:center;padding:12px}
+
+            /* make toggles wrap nicely and full width buttons when needed */
+            .opt-btn{padding:8px 10px}
+            .panel .flex.gap-4.flex-wrap{gap:8px}
+            input#lengthNumber{max-width:110px}
         }
     </style>
 </head>
 
 <body class="min-h-screen flex items-center justify-center p-8">
-    <div class="w-full max-w-3xl card p-8">
+    <div class="w-full max-w-3xl card p-4 md:p-8">
         <div class="flex flex-col md:flex-row md:items-center md:justify-between mb-6">
             <h1 class="text-3xl md:text-4xl font-bold text-white">Generate a secure password</h1>
 
@@ -162,11 +176,11 @@
 
         <div class="panel">
             <div class="mb-6">
-                <label class="block text-sm font-medium muted mb-2">Password</label>
-                <div class="flex gap-3 items-center">
-                    <input id="passwordOutput" readonly class="flex-1 neon-input text-lg font-medium" value="" />
-                    <button id="copyBtn" class="coppy-btn inline-flex items-center gap-2 px-4 py-4 rounded-lg"
-                        aria-label="Copy">
+                    <label class="block text-sm font-medium muted mb-2">Password</label>
+                    <div class="flex gap-1 items-center password-row">
+                        <input id="passwordOutput" readonly class="flex-1 neon-input text-lg font-medium" value="" />
+                        <button id="copyBtn" class="coppy-btn inline-flex items-center gap-2 px-4 py-4 rounded-lg"
+                            aria-label="Copy">
                         <svg width="18" height="18" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
                             <path d="M16 1H4a2 2 0 0 0-2 2v12" stroke="#07141a" stroke-width="1.6"
                                 stroke-linecap="round" stroke-linejoin="round" />
@@ -179,7 +193,7 @@
             </div>
 
             <div class="mb-6">
-                <div class="grid grid-cols-1 md:grid-cols-1 gap-6">
+                <div class="grid grid-cols-1 md:grid-cols-2 gap-6">
                     <div>
                         <label class="block text-sm font-medium muted mb-3">Customize your password</label>
                         <div class="flex gap-4 flex-wrap">
@@ -218,13 +232,13 @@
             </div>
 
             <div class="mt-2">
-                <div class="flex items-center justify-between">
+                <div class="flex items-center justify-between action-row">
                     <button id="generateBtn"
                         class="generateBtn inline-flex items-center gap-3 px-6 py-4 rounded-xl shadow-lg">
                         <!-- <svg width="18" height="18" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg"><path d="M12 2v6" stroke="#06332a" stroke-width="1.6" stroke-linecap="round" stroke-linejoin="round"/><path d="M20 12H4" stroke="#06332a" stroke-width="1.6" stroke-linecap="round" stroke-linejoin="round"/></svg> -->
                         <span id="generateLabel" class="font-semibold ">Generate</span>
                     </button>
-                    <div class="text-sm rounded-md bg-white  px-4 py-4 status muted">Strength: <span id="strength"
+                        <div class="text-sm rounded-md bg-white  px-4 py-4 status muted">Strength: <span id="strength"
                             class="font-semibold text-white">—</span></div>
 
                 </div>
