--- a/index.html
+++ b/index.html
@@ -24,9 +24,10 @@
         }
 
         body {
-            background: radial-gradient(900px 400px at 10% 30%, rgba(46, 224, 140, 0.06), transparent),
+            background: var(--bg-1);
+            /* background: radial-gradient(900px 400px at 10% 30%, rgba(46, 224, 140, 0.06), transparent),
                 radial-gradient(700px 300px at 90% 80%, rgba(20, 200, 255, 0.03), transparent),
-                linear-gradient(180deg, var(--bg-1), var(--bg-2));
+                linear-gradient(180deg, var(--bg-1), var(--bg-2)); */
             font-family: outfit, Inter, ui-sans-serif, system-ui, -apple-system, "Segoe UI", Roboto, "Helvetica Neue", Arial;
         }
 
@@ -133,9 +134,15 @@
         }
 
         .status {
+            background: var(--bg-1);
             /* background: rgba(46, 224, 141, 0.226); */
             border: 1px solid rgba(46, 224, 141, 0.347);
-            color: var(--bg-1);
+            color: white;
+        }
+        .status span{
+            background: var(--bg-1);
+            border-radius: 5px;
+            padding: 5px;
         }
 
         .generateBtn {
@@ -167,7 +174,7 @@
     </style>
 </head>
 
-<body class="min-h-screen flex items-center justify-center p-8">
+<body class="min-h-screen flex items-center justify-center p-2">
     <div class="w-full max-w-3xl card p-4 md:p-8">
         <div class="flex flex-col md:flex-row md:items-center md:justify-between mb-6">
             <h1 class="text-3xl md:text-4xl font-bold text-white">Generate a secure password</h1>
@@ -238,7 +245,7 @@
                         <!-- <svg width="18" height="18" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg"><path d="M12 2v6" stroke="#06332a" stroke-width="1.6" stroke-linecap="round" stroke-linejoin="round"/><path d="M20 12H4" stroke="#06332a" stroke-width="1.6" stroke-linecap="round" stroke-linejoin="round"/></svg> -->
                         <span id="generateLabel" class="font-semibold ">Generate</span>
                     </button>
-                        <div class="text-sm rounded-md bg-white  px-4 py-4 status muted">Strength: <span id="strength"
+                        <div class="text-sm rounded-xl   px-4 py-4 status muted">Strength: <span id="strength"
                             class="font-semibold text-white">—</span></div>
 
                 </div>
