modified:   index.html

--- a/index.html
+++ b/index.html
@@ -177,7 +177,7 @@
 <body class="min-h-screen flex items-center justify-center p-2">
     <div class="w-full max-w-3xl card p-4 md:p-8">
         <div class="flex flex-col md:flex-row md:items-center md:justify-between mb-6">
-            <h1 class="text-3xl md:text-4xl font-bold text-white">Generate a secure password</h1>
+            <h1 class="text-3xl md:text-3xl text-white">Generate a secure password</h1>
 
         </div>
 
@@ -200,7 +200,7 @@
             </div>
 
             <div class="mb-6">
-                <div class="grid grid-cols-1 md:grid-cols-2 gap-6">
+                <div class="grid grid-cols-1 md:grid-cols-1 gap-6">
                     <div>
                         <label class="block text-sm font-medium muted mb-3">Customize your password</label>
                         <div class="flex gap-4 flex-wrap">
